Ignored Lunar package
We don't need to keep it as a part of sample project since user can always import it

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+# Ignore Lunar package
+/Assets/Plugins.meta
+/Assets/Plugins/Lunar
+/Assets/Plugins/Lunar.meta
+/Assets/Editor/Lunar
+/Assets/Editor/Lunar.meta
